--- a/filemanager/screen.css
+++ b/filemanager/screen.css
@@ -96,7 +96,7 @@
     display: none;
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     width: 140px;
     padding: 0;
     background: #FAF8EA;
