--- a/screen.css
+++ b/screen.css
@@ -721,6 +721,8 @@ table [class^="icon-"], [class*=" icon-"] {
     position: fixed;
     top: 15%;
     left: 50%;
+    max-height: 70vh;
+    overflow: auto;
     background: #FAF8EA;
     z-index: 9999999;
     min-height: 100px;
