--- a/screen.css
+++ b/screen.css
@@ -153,6 +153,7 @@ input, textarea, select, button {
     border-bottom: 2px solid #595959;
     color: black;
     border-radius: 2px;
+    line-height: normal;
 }
 
 select option { background: white; }
